# bods-lance

./: .gitignore  README.md  pyproject.toml
src/bods_lance/: __init__.py  cli.py  pipeline.py  schema.py
src/bods_lance/ingestion/: reader.py
src/bods_lance/transform/: common.py  entities.py  persons.py  relationships.py
src/bods_lance/utils/: common.py
tests/: conftest.py  test_bods_fixtures_conformance.py  test_entities.py  test_persons.py  test_reader.py  test_relationships.py  test_schema.py
tests/fixtures/: sample_bods.json
