[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bods-lance"
version = "0.1.0"
description = "Convert BODS v0.4 beneficial ownership data to the Lance columnar format"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Stephen Abbott Pugh"}]
keywords = ["beneficial-ownership", "BODS", "lance", "lancedb", "columnar", "data-conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.1",
    "pyarrow>=14.0",
    "pylance>=0.10.0",
]

[project.optional-dependencies]
lancedb = ["lancedb>=0.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "bods-v04-fixtures>=0.1.1,<0.2",
    "pytest-bods-v04-fixtures>=0.1.1,<0.2",
]

[project.scripts]
bods-lance = "bods_lance.cli:main"

[project.urls]
Homepage = "https://github.com/StephenAbbott/bods-lance"
Repository = "https://github.com/StephenAbbott/bods-lance"
"Bug Tracker" = "https://github.com/StephenAbbott/bods-lance/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
